# Olivine_Diffusion_FeMg

./: Diffusion_Round-Robin.py  Diffusion_Timescales_Summary.xlsx  EBSD_Profile_Rotation.py  Fe_Mg_Diffusion_Convolution_Streamlined.py  Feb 2021_EMP_GCB_version_2_16_20.xlsx  INTEGRATION_GUIDE.md  July_2020_EMP_olivine_profiles.xlsx  KRIGING_PARAMETERS_GUIDE.md  Olivine_Profile_Diffusion_Modeling_Parameters_DB.xlsx  Round Robin_Sample Times version 2  Round Robin_Sample Times version 2.html  Times_database_Diffusivities.xlsx  Xenolith_MeltVein_EMPA_Master.xlsx  Xenolith_Melt_Veins_Diffusion_Modeling_10_2025.py  Xenolith_Melt_Veins_Diffusion_Modeling_Rewrite.py  kriging_parameter_estimation.py  kriging_parameter_examples.py  kriging_params_quick.py  main.py  olivine_EMP_Diffusion_run.py  pyproject.toml
Diffusion Round Robin/: Diffusion Round Robin Data Reorg.xlsx  DiffusionRR-2.xlsx  Round_Robin_Olivine_Profile_Diffusion_Modeling_Parameters_DB.xlsx  Towbin-Diffusion-Round-Robin-Results.docx  ~$wbin-Diffusion-Round-Robin-Results.docx
