[project]
name = "olivine-diffusion-femg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "marimo>=0.19.11",
    "matplotlib>=3.10.6",
    "mplstereonet>=0.6.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pykrige>=1.7.2",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
]
