[project]
name = "olivine-diffusion-femg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "great-tables>=0.21.0",
    "ipykernel>=6.30.1",
    "marimo>=0.20.2",
    "matplotlib>=3.10.6",
    "mplstereonet>=0.6.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pykrige>=1.7.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "selenium>=4.41.0",
]
